<resources>
    <string name="app_name">LabsCM20211-Gr06</string>
    <string name="dd_mm_aaaa">DD/MM/YYYY</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="sexo">Sexo: </string>
    <string name="radio_hombre">Hombre</string>
    <string name="radio_mujer">Mujer</string>
    <string name="nacimiento">Fecha de nacimiento: </string>
    <string name="btn_fecha">Cambiar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="next">Siguiente</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="address">Dirección</string>
    <string name="contact_data_title">Información de contacto</string>
    <string name="done">Finalizar</string>

    <string-array name="countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Ecuador</item>
        <item>Guyana</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Suriname</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
</resources>
