<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutContactData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:drawableStart="@drawable/ic_phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp">
        </EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp">
        </EditText>

        <EditText
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:layout_margin="10dp"
            android:hint="@string/country"
            android:drawableStart="@drawable/ic_country"
            android:drawableLeft="@drawable/ic_country"
            android:drawablePadding="10dp">
        </EditText>

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:layout_margin="10dp"
            android:hint="@string/city"
            android:drawableStart="@drawable/ic_city"
            android:drawableLeft="@drawable/ic_city"
            android:drawablePadding="10dp">
        </EditText>

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:layout_margin="10dp"
            android:hint="@string/address"
            android:drawableStart="@drawable/ic_address"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="10dp">
        </EditText>
    </LinearLayout>

    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next">
        </Button>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>